@@ -5,6 +5,6 @@ import qual.Mutable;
 
 public class ImplicitAppliesToMethodReceiver {
     void foo() {
-        double delta = new Double(1.0).doubleValue();
+        double delta = Double.valueOf(1.0);
     }
 }
